[gd_scene load_steps=33 format=3 uid="uid://di8njwhg0rn63"]

[ext_resource type="Script" path="res://Level/Player/player.gd" id="1_hh38r"]
[ext_resource type="Texture2D" uid="uid://cnih3ghpqfb1" path="res://UI/assets/HealthBar/Empty_HealthBar.png" id="3_ca56h"]
[ext_resource type="Texture2D" uid="uid://d22kxat7u1v8k" path="res://UI/assets/HealthBar/Borders_HealthBar.png" id="4_yx1t7"]
[ext_resource type="Texture2D" uid="uid://5xky86hl13tf" path="res://UI/assets/HealthBar/Full_HealthBar.png" id="5_3tfox"]
[ext_resource type="Texture2D" uid="uid://bxe800td1a6af" path="res://UI/assets/Idle/player_idle.png" id="5_3yem3"]
[ext_resource type="Script" path="res://Level/Player/FSM/fsm.gd" id="6_vk6eb"]
[ext_resource type="Script" path="res://Level/Player/FSM/Idle.gd" id="7_ai86a"]
[ext_resource type="Script" path="res://Level/Player/FSM/Run.gd" id="8_d3np2"]
[ext_resource type="Script" path="res://Level/Player/FSM/Jump.gd" id="9_q3228"]
[ext_resource type="Texture2D" uid="uid://c0swl76s18n43" path="res://UI/assets/Run/Player/JumpPlayer.png" id="11_t4a2x"]
[ext_resource type="Texture2D" uid="uid://bkuap1ysvqot7" path="res://UI/assets/Run/Player/RunPlayer.png" id="12_1dkvx"]
[ext_resource type="Texture2D" uid="uid://wi10padrgy6y" path="res://UI/assets/Weapons/Bullets/lazer.png" id="12_rhgea"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_x02gu"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_yty4r"]
points = PackedVector2Array(10, 9, 10, -9, 0, -20, -10, -9, -10, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvn7o"]
size = Vector2(22, 22)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_bakwj"]
b = Vector2(0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_882o3"]
atlas = ExtResource("5_3yem3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jnvw"]
atlas = ExtResource("5_3yem3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35mgw"]
atlas = ExtResource("5_3yem3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0useh"]
atlas = ExtResource("5_3yem3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_77v6y"]
atlas = ExtResource("5_3yem3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o1af"]
atlas = ExtResource("11_t4a2x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuvnr"]
atlas = ExtResource("11_t4a2x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4fc1"]
atlas = ExtResource("11_t4a2x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srilr"]
atlas = ExtResource("11_t4a2x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf6sv"]
atlas = ExtResource("12_1dkvx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4i2i"]
atlas = ExtResource("12_1dkvx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_id6dy"]
atlas = ExtResource("12_1dkvx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuuji"]
atlas = ExtResource("12_1dkvx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5bnr"]
atlas = ExtResource("12_1dkvx")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4svu"]
atlas = ExtResource("12_1dkvx")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_41se0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_882o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jnvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35mgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0useh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77v6y")
}],
"loop": true,
"name": &"player_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o1af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuvnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4fc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srilr")
}],
"loop": true,
"name": &"player_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf6sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4i2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id6dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuuji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5bnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4svu")
}],
"loop": true,
"name": &"player_run",
"speed": 5.0
}]

[node name="player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_hh38r")

[node name="Shooting" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shooting"]
z_index = 1
shape = SubResource("SegmentShape2D_x02gu")

[node name="playerCollision" type="CollisionShape2D" parent="."]
shape = SubResource("ConvexPolygonShape2D_yty4r")

[node name="AreaPlayer" type="Area2D" parent="."]
modulate = Color(0, 0, 0, 1)
collision_layer = 8
collision_mask = 4

[node name="AreaCollision" type="CollisionShape2D" parent="AreaPlayer"]
shape = SubResource("RectangleShape2D_jvn7o")

[node name="HelpShooting" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HelpShooting"]
z_index = 1
shape = SubResource("SegmentShape2D_bakwj")
debug_color = Color(0, 0.482353, 0, 1)

[node name="PlayerHealthBar" type="TextureProgressBar" parent="."]
texture_filter = 1
offset_left = -16.0
offset_top = -46.0
offset_right = 16.0
offset_bottom = -14.0
value = 100.0
texture_under = ExtResource("3_ca56h")
texture_over = ExtResource("4_yx1t7")
texture_progress = ExtResource("5_3tfox")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.085, 3.085)
position_smoothing_enabled = true

[node name="playerSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_41se0")
animation = &"player_idle"

[node name="FSM" type="Node" parent="."]
script = ExtResource("6_vk6eb")
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("7_ai86a")

[node name="Run" type="Node" parent="FSM"]
script = ExtResource("8_d3np2")

[node name="Jump" type="Node" parent="FSM"]
script = ExtResource("9_q3228")

[node name="LazerGunLine" type="Line2D" parent="."]
z_index = 1
texture_filter = 1
width = 5.0
texture = ExtResource("12_rhgea")
texture_mode = 2

[connection signal="body_entered" from="Shooting" to="." method="shootingBody_entered"]
[connection signal="body_entered" from="AreaPlayer" to="." method="areaPlayer_entered"]
[connection signal="body_exited" from="AreaPlayer" to="." method="areaPlayer_exited"]
